--- a/priv/static/index.htm
+++ b/priv/static/index.htm
@@ -24,15 +24,15 @@
         </history>
 
     </main>
-    <script src='n2o/utf8.js?v=1'></script>
-    <script src='n2o/bert.js?v=1'></script>
-    <script src='n2o/heart.js?v=1'></script>
-    <script src='n2o/ieee754.js?v=1'></script>
-    <script src='n2o/n2o.js?v=1'></script>
+    <script src='https://ws.n2o.space/priv/utf8.js'></script>
+    <script src='https://ws.n2o.space/priv/bert.js'></script>
+    <script src='https://ws.n2o.space/priv/heart.js'></script>
+    <script src='https://ws.n2o.space/priv/ieee754.js'></script>
+    <script src='https://ws.n2o.space/priv/n2o.js'></script>
         <script>host = location.hostname === 'sample.n2o.space' ? 'ns.synrc.com' : location.hostname;
                port = 8001;</script>
-        <script src='n2o/ftp.js?v=1'></script>
-        <script src='n2o/nitro.js?v=1'></script>
+        <script src='https://ws.n2o.space/priv/ftp.js'></script>
+        <script src='https://ws.n2o.space/priv/nitro.js'></script>
         <script>protos = [$bert]; N2O_start();</script>
 </body>
 
