--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='synrc.css?v=202' type='text/css' rel='stylesheet'>
+    <link href='https://sample.n2o.space/priv/static/synrc.css' type='text/css' rel='stylesheet'>
     <title>Login</title>
 </head>
 
