--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -30,6 +30,7 @@
                port = 8001;</script>
         <script src='https://ws.n2o.space/priv/ftp.js'></script>
         <script src='https://ws.n2o.space/priv/nitro.js'></script>
+        <script>$io.do = function(r) { console.log(r); };</script>
         <script>protos = [$bert]; N2O_start();</script>
 </body>
 
