--- a/priv/static/index.htm
+++ b/priv/static/index.htm
@@ -30,9 +30,10 @@
     <script src='https://ws.n2o.space/priv/ieee754.js'></script>
     <script src='https://ws.n2o.space/priv/n2o.js'></script>
         <script>host = location.hostname === 'sample.n2o.space' ? 'ns.synrc.com' : location.hostname;
-               port = 8001;</script>
+                port = 8001;</script>
         <script src='https://ws.n2o.space/priv/ftp.js'></script>
         <script src='https://ws.n2o.space/priv/nitro.js'></script>
+        <script>$io.do = function(r) { console.log(r); };</script>
         <script>protos = [$bert]; N2O_start();</script>
 </body>
 
