--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav>
     <a href='https://n2o.space/'>SPACE</a>
-    <a href='https://sample.n2o.space' style="background:#ededed;">SAMPLE</a>
+    <a href='https://sample.o7.network' style="background:#ededed;">SAMPLE</a>
     <a href='https://sample-2.n2o.space:8001/app/login.htm'>ADMIN</a>
 </nav>
 
