--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -26,12 +26,11 @@
     <script src='https://ws.n2o.space/priv/heart.js'></script>
     <script src='https://ws.n2o.space/priv/ieee754.js'></script>
     <script src='https://ws.n2o.space/priv/n2o.js'></script>
-        <script>host = location.hostname === 'sample.n2o.space' ? 'ns.synrc.com' : location.hostname;
-                port = 8001;</script>
-        <script src='https://ws.n2o.space/priv/ftp.js'></script>
-        <script src='https://ws.n2o.space/priv/nitro.js'></script>
-        <script>$io.do = function(r) { console.log(r); };</script>
-        <script>protos = [$bert]; N2O_start();</script>
+    <script>host = location.hostname; port = 8002;</script>
+    <script src='https://ws.n2o.space/priv/ftp.js'></script>
+    <script src='https://ws.n2o.space/priv/nitro.js'></script>
+    <script>$io.do = function(r) { console.log(r); };</script>
+    <script>protos = [$bert]; N2O_start();</script>
 </body>
 
 </html>
