--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <section>
             <h3>SYNOPSIS</h3>
             <div>SAMPLE is a simple WebSocket application with
-                 GPROC or SYN as a message bus.
-                 Check out demo at <a href="https://sample.n2o.space/index.htm">ns.synrc.com:8001</a>.</div>
+                 GPROC or SYN as a message bus.</div>
         </section>
 
         <section>
