--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </nav>
 
 <header>
-    <a href="https://github.com/o7/sample"><img src="https://synrc.space/images/Synrc Neo.svg?v=1"></a>
+    <a href="https://github.com/o7/sample"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200&v=4"></a>
     <h1>SAMPLE</h1>
 </header>
 
