--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
-<html>
-
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="Maxim Sokhatsky" />
-    <title>SAMPLE</title>
-    <link rel="stylesheet" href="https://synrc.space/synrc.css" />
-</head>
-
-<body>
-
-<nav>
-    <a href='https://o7.network'>O7</a>
-    <a href='https://sample.o7.network' style="background:#ededed;">SAMPLE</a>
-    <a href='https://sample-2.n2o.space:8002/app/login.htm'>ADMIN</a>
-</nav>
-
-<header>
-    <a href="https://github.com/o7/sample"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200&v=4"></a>
+<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" /><meta name="author" content="Maxim Sokhatsky" /><title>SAMPLE</title><link rel="stylesheet" href="https://synrc.space/synrc.css" /></head><body><nav>
+    <a href="https://o7.network">O7</a>
+    <a href="https://sample.o7.network" style="background:#ededed;">SAMPLE</a>
+    <a href="https://sample-2.n2o.space:8002/app/login.htm">ADMIN</a>
+</nav><header>
+    <a href="https://github.com/o7/sample"><img src="https://avatars2.githubusercontent.com/u/45430889?s=200" /></a>
     <h1>SAMPLE</h1>
-</header>
-
-<aside>
+</header><aside>
     <article>
         <section>
             <h3>SYNOPSIS</h3>
@@ -32,15 +14,11 @@
         </section>
 
         <section>
-            <a name=plugin><h3>MANUAL</h3></a>
-            <div><ul>
-           <li><a href="man/sample.htm">SAMPLE</a></font></li>
-           <li><a href="man/index.htm">INDEX</a></font></li>
-           <li><a href="man/login.htm">LOGIN</a></font></li>
-            </ul></div>
-            <br>
+            <a name="plugin"></a><h3>MANUAL</h3>
+            <div><ul><li><a href="man/sample.htm">SAMPLE</a></li><li><a href="man/index.htm">INDEX</a></li><li><a href="man/login.htm">LOGIN</a></li></ul></div>
+            <br />
             <div>
-                NOV 2018 &copy; <a href="https://github.com/5HT">5HT</a> ISC
+                NOV 2018 © <a href="https://github.com/5HT">5HT</a> ISC
             </div>
         <figure>
         <code>
@@ -51,31 +29,20 @@
 
         </section>
     </article>
-</aside>
-<main>
+</aside><main>
     <section>
-        <a name=sample><h3>Sample Application</h3></a>
+        <a name="sample"></a><h3>Sample Application</h3>
         <figure>
             <figcaption>Picture 3. N2O Review Application</figcaption>
-            <img src="https://n2o.space/img/n2o-ws.png">
+            <img src="https://n2o.space/img/n2o-ws.png" />
         </figure>
     </section>
 
     <section>
-        <a name=plugin><h3>Related Documents</h3></a>
+        <a name="plugin"></a><h3>Related Documents</h3>
         <div>
-        <ul>
-           <li><a href="https://n2o.space/articles/n2o.htm">N2O: PROTOCOL</a></li>
-           <li><a href="https://n2o.space/articles/web.htm">N2O: SERVER</a></li>
-           <li><a href="https://n2o.space/articles/history.htm">N2O: HISTORY</a></li>
-           <li><a href="https://5ht.co/spawnproc.htm">N2O: PRIVATBANK</a></li>
-        </ul></div>
+        <ul><li><a href="https://n2o.space/articles/n2o.htm">N2O: PROTOCOL</a></li><li><a href="https://n2o.space/articles/web.htm">N2O: SERVER</a></li><li><a href="https://n2o.space/articles/history.htm">N2O: HISTORY</a></li><li><a href="https://5ht.co/spawnproc.htm">N2O: PRIVATBANK</a></li></ul></div>
     </section>
-</main>
-
-<footer>
+</main><footer>
     Made with <span class="heart">❤</span> to N2O
-</footer>
-
-</body>
-</html>
+</footer></body></html>
