--- a/priv/static/index.htm
+++ b/priv/static/index.htm
@@ -1,39 +1,13 @@
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://sample.n2o.space/priv/static/synrc.css' type='text/css' rel='stylesheet'>
-    <title>Chat</title>
-</head>
-
-<body class="chat">
-    <header>
-        <a href="/app/login.htm"><img src="https://n2o.space/img/Synrc%20Neo.svg"></a>
-        <h2 id=heading>room</h2>
-        <button id=logout>logout</button>
-    </header>
-    <main>
-        <form>
-            <textarea id=message rows='4' autofocus placeholder="Just type what you think about this"></textarea>
-            <button id=upload>Browse</button>
-            <button id=send>chat</button>
-        </form>
+<html><head><meta charset="utf-8" /><meta http-equiv="x-ua-compatible" content="ie=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://sample.n2o.space/priv/static/synrc.css" type="text/css" rel="stylesheet" /><title>Chat</title></head><body class="chat"><header>
+        <a href="/app/login.htm"><img src="https://n2o.space/img/Synrc%20Neo.svg" /></a>
+        <h2 id="heading">room</h2>
+        <button id="logout">logout</button>
+    </header><main>
+        <form></form><textarea id="message" rows="4" autofocus="true" placeholder="Just type what you think about this"></textarea>
+            <button id="upload">Browse</button>
+            <button id="send">chat</button>
+        
         <history id="history">
         </history>
 
-    </main>
-    <script src='https://ws.n2o.space/priv/utf8.js'></script>
-    <script src='https://ws.n2o.space/priv/bert.js'></script>
-    <script src='https://ws.n2o.space/priv/heart.js'></script>
-    <script src='https://ws.n2o.space/priv/ieee754.js'></script>
-    <script src='https://ws.n2o.space/priv/n2o.js'></script>
-    <script>host = location.hostname; port = 8002;</script>
-    <script src='https://ws.n2o.space/priv/ftp.js'></script>
-    <script src='https://ws.n2o.space/priv/nitro.js'></script>
-    <script>$io.do = function(r) { console.log(r); };</script>
-    <script>protos = [$bert]; N2O_start();</script>
-</body>
-
-</html>
+    </main><script src="https://ws.n2o.space/priv/utf8.js"></script><script src="https://ws.n2o.space/priv/bert.js"></script><script src="https://ws.n2o.space/priv/heart.js"></script><script src="https://ws.n2o.space/priv/ieee754.js"></script><script src="https://ws.n2o.space/priv/n2o.js"></script><script>host = location.hostname; port = 8002;</script><script src="https://ws.n2o.space/priv/ftp.js"></script><script src="https://ws.n2o.space/priv/nitro.js"></script><script>$io.do = function(r) { console.log(r); };</script><script>protos = [$bert]; N2O_start();</script></body></html>
