--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -1,36 +1,9 @@
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href='https://sample.n2o.space/priv/static/synrc.css' type='text/css' rel='stylesheet'>
-    <title>Login</title>
-</head>
-
-<body class="login">
-    <header>
+<html><head><meta charset="utf-8" /><meta http-equiv="x-ua-compatible" content="ie=edge" /><meta name="viewport" content="width=device-width, initial-scale=1" /><link href="https://sample.n2o.space/priv/static/synrc.css" type="text/css" rel="stylesheet" /><title>Login</title></head><body class="login"><header>
         <a href="/app/index.htm">
-        <img src="https://n2o.space/img/Synrc%20Neo.svg" style="margin-bottom:40px;"></a>
-    </header>
-    <form>
-        <label for="user">Choose Nickname:</label>
-        <input type="text" id="user" autofocus>
+        <img src="https://n2o.space/img/Synrc%20Neo.svg" style="margin-bottom:40px;" /></a>
+    </header><form><p><label for="user">Choose Nickname:</label>
+        <input type="text" id="user" autofocus="true" />
         <label for="pass">Join or Create Channel:</label>
-        <input type="text" id="pass">
+        <input type="text" id="pass" />
         <button id="loginButton">login</button>
-    </form>
-    <footer>Brought to you with ♡ by N2O developers.</footer>
-    <script src='https://ws.n2o.space/priv/utf8.js'></script>
-    <script src='https://ws.n2o.space/priv/bert.js'></script>
-    <script src='https://ws.n2o.space/priv/heart.js'></script>
-    <script src='https://ws.n2o.space/priv/ieee754.js'></script>
-    <script src='https://ws.n2o.space/priv/n2o.js'></script>
-    <script>host = location.hostname; port = 8002;</script>
-    <script src='https://ws.n2o.space/priv/ftp.js'></script>
-    <script src='https://ws.n2o.space/priv/nitro.js'></script>
-    <script>$io.do = function(r) { console.log(r); };</script>
-    <script>protos = [$bert]; N2O_start();</script>
-</body>
-
-</html>
+    </p></form><footer>Brought to you with ♡ by N2O developers.</footer><script src="https://ws.n2o.space/priv/utf8.js"></script><script src="https://ws.n2o.space/priv/bert.js"></script><script src="https://ws.n2o.space/priv/heart.js"></script><script src="https://ws.n2o.space/priv/ieee754.js"></script><script src="https://ws.n2o.space/priv/n2o.js"></script><script>host = location.hostname; port = 8002;</script><script src="https://ws.n2o.space/priv/ftp.js"></script><script src="https://ws.n2o.space/priv/nitro.js"></script><script>$io.do = function(r) { console.log(r); };</script><script>protos = [$bert]; N2O_start();</script></body></html>
