--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" /><meta name="author" content="Maxim Sokhatsky" /><title>SAMPLE</title><link rel="stylesheet" href="https://synrc.space/synrc.css" /></head><body><nav>
+<html><head><meta charset="utf-8" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="description" content="" />
+<meta name="author" content="Maxim Sokhatsky" /><title>SAMPLE</title>
+    <link rel="stylesheet" href="https://n2o.dev/blank.css" />
+    <link rel="stylesheet" href="https://n2o.dev/zima.css" />
+</head><body><nav>
     <a href="https://o7.network">O7</a>
     <a href="https://sample.o7.network" style="background:#ededed;">SAMPLE</a>
     <a href="https://sample-2.n2o.space:8002/app/login.htm">ADMIN</a>
@@ -11,6 +16,12 @@
             <h3>SYNOPSIS</h3>
             <div>SAMPLE is a simple WebSocket application with
                  GPROC or SYN as a message bus.</div>
+        <figure>
+        <code>
+ $ mix deps.get
+ $ iex -S mix
+ $ open https://127.0.0.1:8002/app/index.htm
+        </code></figure>
         </section>
 
         <section>
@@ -20,12 +31,6 @@
             <div>
                 NOV 2018 © <a href="https://github.com/5HT">5HT</a> ISC
             </div>
-        <figure>
-        <code>
- $ mix deps.get
- $ iex -S mix
- $ open https://127.0.0.1:8002/app/index.htm
-        </code></figure>
 
         </section>
     </article>
