--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
         <section>
             <h3>SYNOPSIS</h3>
             <div>SAMPLE is a simple WebSocket application with
-                 GPROC or SYN as a message bus.</div>
+                 GPROC or SYN as a message bus.</div><br/>
         <figure>
-        <code>
- $ mix deps.get
+        <code> $ mix deps.get
  $ iex -S mix
- $ open https://127.0.0.1:8002/app/index.htm
-        </code></figure>
+ $ open https://loc:8002/app/index.htm</code></figure>
         </section>
 
         <section>
