pass is room actually, enable debug

--- a/priv/static/index.htm
+++ b/priv/static/index.htm
@@ -24,7 +24,7 @@
     <script src="https://ws.n2o.space/priv/heart.js"></script>
     <script src="https://ws.n2o.space/priv/ieee754.js"></script>
     <script src="https://ws.n2o.space/priv/n2o.js"></script>
-    <script>host = location.hostname; port = 8002;</script>
+    <script>host = location.hostname; port = 8002; debug = true;</script>
     <script src="https://ws.n2o.space/priv/ftp.js"></script>
     <script src="https://ws.n2o.space/priv/nitro.js"></script>
     <script>$io.do = function(r) { console.log(r); };</script>
