--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -14,8 +14,8 @@
 <main>
     <form><p><label for="user">Choose Nickname:</label>
         <input type="text" id="user" autofocus="true" />
-        <label for="pass">Join or Create Channel:</label>
-        <input type="text" id="pass" />
+        <label for="room">Join or Create Channel:</label>
+        <input type="text" id="room" />
         <button id="loginButton">login</button></p>
     </form>
 </main>
@@ -25,7 +25,7 @@
     <script src="https://ws.n2o.space/priv/heart.js"></script>
     <script src="https://ws.n2o.space/priv/ieee754.js"></script>
     <script src="https://ws.n2o.space/priv/n2o.js"></script>
-    <script>host = location.hostname; port = 8002;</script>
+    <script>host = location.hostname; port = 8002; debug = true;</script>
     <script src="https://ws.n2o.space/priv/ftp.js"></script>
     <script src="https://ws.n2o.space/priv/nitro.js"></script>
     <script>$io.do = function(r) { console.log(r); };</script>
