--- a/priv/static/login.htm
+++ b/priv/static/login.htm
@@ -3,13 +3,13 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://sample.n2o.space/priv/static/synrc.css" type="text/css" rel="stylesheet" />
+    <link href="https://sample.n2o.dev/priv/static/synrc.css" type="text/css" rel="stylesheet" />
     <title>Login</title>
 </head>
 <body class="login">
 <header>
     <a href="/app/index.htm">
-    <img src="https://n2o.space/img/Synrc%20Neo.svg" style="margin-bottom:40px;" /></a>
+    <img src="https://n2o.dev/img/Synrc%20Neo.svg" style="margin-bottom:40px;" /></a>
 </header>
 <main>
     <form><p><label for="user">Choose Nickname:</label>
@@ -20,14 +20,14 @@
     </form>
 </main>
 <footer>Brought to you with ♡ by N2O developers.</footer>
-    <script src="https://ws.n2o.space/priv/utf8.js"></script>
-    <script src="https://ws.n2o.space/priv/bert.js"></script>
-    <script src="https://ws.n2o.space/priv/heart.js"></script>
-    <script src="https://ws.n2o.space/priv/ieee754.js"></script>
-    <script src="https://ws.n2o.space/priv/n2o.js"></script>
+    <script src="https://ws.n2o.dev/priv/utf8.js"></script>
+    <script src="https://ws.n2o.dev/priv/bert.js"></script>
+    <script src="https://ws.n2o.dev/priv/heart.js"></script>
+    <script src="https://ws.n2o.dev/priv/ieee754.js"></script>
+    <script src="https://ws.n2o.dev/priv/n2o.js"></script>
     <script>host = location.hostname; port = 8002; debug = true;</script>
-    <script src="https://ws.n2o.space/priv/ftp.js"></script>
-    <script src="https://ws.n2o.space/priv/nitro.js"></script>
+    <script src="https://ws.n2o.dev/priv/ftp.js"></script>
+    <script src="https://nitro.n2o.dev/priv/js/nitro.js"></script>
     <script>$io.do = function(r) { console.log(r); };</script>
     <script>protos = [$bert]; N2O_start();</script>
 </body>
