--- a/priv/static/index.htm
+++ b/priv/static/index.htm
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://sample.n2o.space/priv/static/synrc.css" type="text/css" rel="stylesheet" />
+    <link href="https://sample.n2o.dev/priv/static/synrc.css" type="text/css" rel="stylesheet" />
     <title>Chat</title>
 </head>
 <body class="chat">
@@ -19,14 +19,14 @@
     <button id="send">chat</button>
     <history id="history"></history>
 </main>
-    <script src="https://ws.n2o.space/priv/utf8.js"></script>
-    <script src="https://ws.n2o.space/priv/bert.js"></script>
-    <script src="https://ws.n2o.space/priv/heart.js"></script>
-    <script src="https://ws.n2o.space/priv/ieee754.js"></script>
-    <script src="https://ws.n2o.space/priv/n2o.js"></script>
+    <script src="https://ws.n2o.dev/priv/utf8.js"></script>
+    <script src="https://ws.n2o.dev/priv/bert.js"></script>
+    <script src="https://ws.n2o.dev/priv/heart.js"></script>
+    <script src="https://ws.n2o.dev/priv/ieee754.js"></script>
+    <script src="https://ws.n2o.dev/priv/n2o.js"></script>
     <script>host = location.hostname; port = 8002; debug = true;</script>
-    <script src="https://ws.n2o.space/priv/ftp.js"></script>
-    <script src="https://ws.n2o.space/priv/nitro.js"></script>
+    <script src="https://ws.n2o.dev/priv/ftp.js"></script>
+    <script src="https://nitro.n2o.dev/priv/js/nitro.js"></script>
     <script>$io.do = function(r) { console.log(r); };</script>
     <script>protos = [$bert]; N2O_start();</script>
 </body>
